--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
-#cardWrapper {
+ 
+ body {
+        background-color: #a1ef7a;
+
+ }
+ 
+ #cardWrapper {
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
@@ -19,5 +25,21 @@
   padding: 20px;
   font-size: 30px;
   text-align: center;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+.column {
+  flex: 50%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
 }
 
