--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,50 @@
   vertical-align: middle;
 }
 
+#cardWrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  margin:auto;
+  justify-content: center;
+
+}
+
+.card{
+  width: 300px;
+  height: 450px;
+  background-color: #333;
+  border-radius: 15px;
+  outline: 3px solid rgba(255, 255, 255, .5);
+  outline-offset: -8px;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, .1);
+  position: relative;
+  overflow: hidden;
+
+}
+
+.card-image{
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform .75s;
+
+}
+
+.card:hover .card-image{
+  transform: scale(1.15);
+}
+
+.card-title{
+  position: absolute;
+  left: 25px;
+  bottom: 15px;
+  font-size: 25px;
+  text-shadow: o o 1px rgba(0, 0, 0, .5);
+
+
+}
+
+
