--- a/css3/style.css
+++ b/css3/style.css
@@ -1,6 +1,23 @@
- 
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-row-gap: 50px;
+  grid-column-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+} 
+
  body {
     background-color: #71a5de;
+
 
 }
 
@@ -51,4 +68,3 @@ body {
   color: white;
   transform: rotateY(180deg);
 }
-
